--- a/src/Images.module.css
+++ b/src/Images.module.css
@@ -1,6 +1,6 @@
 .grid {
     display: grid;
-    grid-template-columns: repeat(4, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 5em;
 }
 
