--- a/src/App.module.css
+++ b/src/App.module.css
@@ -44,4 +44,30 @@
 
 .grid {
     display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    gap: 3em;
+}
+
+img {
+    max-width: 200px;
+    grid-area: 1 / 1 / -3 ;
+}
+
+.gridItem {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 1em;
+}
+
+.quantityGrid {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.totalPrice {
+    grid-area: 1 / 2 / 3 / 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
